--- a/assets/css/style_custom.css
+++ b/assets/css/style_custom.css
@@ -4,4 +4,4 @@ header, footer, #header, #title {
 
 #logo { width: 50%; }
 
-.wrapper { max-width: 950px; }
+section, .wrapper { max-width: 950px; }
