--- a/assets/css/style_custom.css
+++ b/assets/css/style_custom.css
@@ -1,7 +1,3 @@
-header, footer, #header, #title {
-  display: none;
-}
-
+header, footer, #header, #title { display: none; }
 #logo { width: 50%; }
-
 section, .wrapper { max-width: 950px; }
